<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/daysToTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:text="@string/days_to"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@id/dateTimePickBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTimePickBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/pickboxBackgroundColor"
        android:padding="10dp"
        android:text="@string/mock_picked_datetime"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@id/daysToTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/daysToTV"
        app:layout_constraintTop_toTopOf="@id/daysToTV" />

    <TextView
        android:id="@+id/daysCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mock_days"
        android:textColor="@color/textColorImportant"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daysToTV" />

    <CheckBox
        android:id="@+id/notificationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/notification_checkbox_text"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daysCountTV" />


    <TextView
        android:id="@+id/notificationTimePickBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/pickboxBackgroundColor"
        android:padding="10dp"
        android:text="@string/mock_picked_time"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/notificationCheckbox"
        app:layout_constraintStart_toEndOf="@id/notificationCheckbox"
        app:layout_constraintTop_toTopOf="@id/notificationCheckbox" />

    <TextView
        android:id="@+id/thingsToDoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/things_to_do"
        app:layout_constraintTop_toBottomOf="@id/notificationCheckbox"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintStart_toStartOf="@id/notificationCheckbox"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thingsToDoRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/thingsToDoTV"
        app:layout_constraintTop_toBottomOf="@id/thingsToDoTV"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>